# findChessBot

./: .project  README.md  camera_test.py
Ai/: CMakeLists.txt  package.xml
Ai/src/: RecognitionAndAI.py  requirements.txt
Ai/src/Utils/: ChessAIUtils.py  ImageProcessingUtils.py  RecognitionUtils.py
ChessAI/: AI.py  AIacc.py  Engine-Copy1.ipynb  Engine.py  FENChessELOTest.csv  NNUETest.ipynb  ResultSimulation(AutoRecovered).xlsx  ResultSimulation.xlsx  app.py  engine.spec  main.py  test.py  uci.py
ChessAI/.ipynb_checkpoints/: Engine-Copy1-checkpoint.ipynb  Engine-checkpoint.ipynb  Engine-checkpoint.py  NNUETest-checkpoint.ipynb
ChessAI/templates/: bbc.html
ChessAI_Complete/: ChessAI.py
ROS/: CMakeLists.txt  package.xml
STM32H7/: .cproject  .mxproject  .project  Docklight Communication.ptp  STM32H743ZI2ROS01.ioc  STM32H743ZI2_Module8-9 Debug.launch  STM32H743ZI2_Module8-9.ioc  STM32H743ZITX_FLASH.ld  STM32H743ZITX_RAM.ld  mx.scratch
STM32H7/Debug/: STM32H743ZI2ROS01.elf  STM32H743ZI2ROS01.list  STM32H743ZI2ROS01.map  STM32H743ZI2_Module8-9.elf  STM32H743ZI2_Module8-9.list  STM32H743ZI2_Module8-9.map  makefile  objects.list  sources.mk
STM32H7/PyQt5/: Main Overall Module8-9 Manual 20210327.ui
STM32H7/pythonCRC16Project/: CRC16.py  Test_pose.py  Traj_on.py  encoder_joint_state.py  main.py
ai/: CMakeLists.txt  package.xml
ai/src/: RecognitionAndAI.py
ai/srv/: AIComputeAndPlay.srv  CaptureBeforeHumanPlay.srv  ForceRecognize.srv  RecurrentRecognition.srv
findchessbot/: CMakeLists.txt  package.xml  setup.cfg  setup.py  state_publisher.py  timor.c
findchessbot/findchessbot/: Communication.py  Super_OS.py  Traj.py  input_chessboard_rpm.py  pub.py  state_publisher.py  sub.py  test.py
findchessbot/launch/: demo.launch.py  view_robot.launch.py
findchessbot/meshes/: chessboard_black.STL
findchessbot/meshes/kuy/: base_link.STL
findchessbot/msg/: JogJoint.msg  JogLinear.msg
findchessbot/python_lib/: findchessbot_kinematic_lib.py  util.py
findchessbot/rviz/: view.rviz
findchessbot/scripts/: Action_Server.py  Action_call.py  Robot_jointstate.py  Serial_Commu.py  Server.py  Super_OS.py  Test.py  Test_Commu.py  UIFinal.py  Ui.py  findchessbot_state_publisher.py  input_chessboard_rpm.py  test.py
findchessbot/srv/: Capture.srv  Castling.srv  JogJoint.srv  JogLinear.srv  McuMode.srv  MoveChesspiece.srv  PoseGripper.srv  PromotePawn.srv
findchessbot/urdf/: FindChessBot.SLDASM.urdf  findchessbot.urdf  planar_3dof.urdf
findchessbot_old_Ws/findchessbot/: Communication.py  Super_OS.py  input_chessboard_rpm.py  pub.py  state_publisher.py
findchessbot_old_Ws/launch/: view_robot.launch.py
findchessbot_old_Ws/meshes/: chessboard.STL
findchessbot_old_Ws/rviz/: view.rviz
findchessbot_old_Ws/urdf/: findchessbot.urdf
(+129 files in other folders)
